<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_download_status">Download status</string>
    <string name="notification_channel_id">channelId</string>
    <string name="notification_channel_name">Downloading notifications</string>
    <string name="notification_download_success">Successfully downloaded!</string>
    <string name="notification_download_failed">Download failed!</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="download_glide_text">Glide - Image Loading library by BumpTech</string>
    <string name="download_this_app_text">Load App - Current repository by Udacity</string>
    <string name="download_retrofit_text">Retrofit - type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="download_custom">Download from your custom URL</string>
    <string name="header_image">Header image</string>
    <string name="download">Download</string>
    <string name="loading_in_process">Loading is in the process</string>
    <string name="nothing_selected_radio_group">You have to select at least one field</string>
    <string name="the_loading_is_pending">The loading is pending</string>
    <string name="loading_is_paused">The loading is paused</string>
    <string name="wrong_url_toast">Your URL is wrong, try again or select another download option</string>
    <string name="wrong_file_name_toast">The length of file name should be at least 5 characters including the file format which ends with dot: \".\", for example \"2.jpg\"</string>

</resources>
